index page with map sticky margin map fixed and weather icon collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,7 +94,7 @@
 }
 
 .card-body{
-  min-height: 370px;
+  min-height: 250px;
 }
 
   div.relative {
