--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -108,6 +108,3 @@
   height: 100%;
 }
 
-a {
-  color:white
-}
