--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -256,3 +256,18 @@
     padding: 0.5%;
   }
 }
+
+.beach-weather {
+  z-index:99999;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,11,116,1) 46%, rgba(0,212,255,1) 100%);
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  text-align: center;
+
+}
+
+.collapsed {
+  border: none;
+}
